package com.keinen.ddd.Order;

public enum OrderState {
    PAYMENT_WAITING, PREPARING , SHIPPED, DELIVERING, DELIVERY_COMPLETED, CANCELED;
}
